[INTERNAL][FIX] sap.m.InputBase: Description alignment is now corrected
- with the previous fix the description was broken - on smaller width it
  was going to a new line
- removed already redundant workaround in the StepInput that was fixed
  with the previous fix

--- a/src/sap.m/src/sap/m/themes/base/InputBase.less
+++ b/src/sap.m/src/sap/m/themes/base/InputBase.less
@@ -7,7 +7,7 @@
 	height: 2.5rem;
 	background: transparent;
 	position: relative;
-	display: inline-block;
+	display: inline-flex;
 	vertical-align: top;
 	outline: none;
 	box-sizing: border-box;
@@ -47,8 +47,8 @@
 	justify-content: flex-end;
 	position: relative;
 	overflow: hidden;
-	min-width: -moz-fit-content;
-	min-width: fit-content;
+	min-width: -moz-min-content;
+	min-width: min-content;
 }
 
 .sapMInputBaseHasBeginIcons .sapMInputBaseInner {
